--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "be-nc-news",
-  "version": "1.0.0",
-  "description": "bc-nc-news",
-  "main": "index.js",
-  "scripts": {
-    "setup-dbs": "psql -f ./db/setup.sql",
-    "seed": "node ./db/seeds/run-seed.js",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/northcoders/be-nc-news.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/northcoders/be-nc-news/issues"
-  },
-  "homepage": "https://github.com/northcoders/be-nc-news#readme",
-  "devDependencies": {
-    "jest": "^27.3.1",
-    "jest-sorted": "^1.0.12"
-  },
-  "dependencies": {
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "pg": "^8.7.1",
-    "pg-format": "^1.0.4",
-    "supertest": "^6.1.6"
-  },
-  "jest": {
-    "setupFilesAfterEnv": ["jest-sorted"]
-  }
+	"name": "be-nc-news",
+	"version": "1.0.0",
+	"description": "bc-nc-news",
+	"main": "index.js",
+	"scripts": {
+		"setup-dbs": "psql -f ./db/setup.sql",
+		"seed": "node ./db/seeds/run-seed.js",
+		"test": "jest",
+		"seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
+		"start": "node listen.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/northcoders/be-nc-news.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/northcoders/be-nc-news/issues"
+	},
+	"homepage": "https://github.com/northcoders/be-nc-news#readme",
+	"devDependencies": {
+		"jest": "^27.3.1",
+		"jest-sorted": "^1.0.12"
+	},
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"pg": "^8.7.1",
+		"pg-format": "^1.0.4",
+		"supertest": "^6.1.6"
+	},
+	"jest": {
+		"setupFilesAfterEnv": [
+			"jest-sorted"
+		]
+	}
 }
