--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"jest-sorted": "^1.0.12"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"pg": "^8.7.1",
